force-app/main/default/objects/Apex_Debug_Log__c/Apex_Debug_Log__c.object-meta.xml
<CustomObject>
    <description>Captures results of non-user facing transactions such as Apex endpoints, callouts and asynchronous jobs</description>
    <label>Apex Debug Log</label>
    <nameField>
        <displayFormat>ADL-{00000000}</displayFormat>
        <label>Apex Debug Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>