force-app/main/default/objects/Apex_Debug_Log__c/fields/Apex_Class_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Method_Name__c</fullName>
    <label>Apex Class Method Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>