force-app/main/default/objects/Apex_Debug_Log__c/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <description>The invoking class that created the record</description>
    <label>Apex Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>