force-app/main/default/objects/Apex_Debug_Log__c/fields/Callout_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Callout_Endpoint_URL__c</fullName>
    <label>Callout Endpoint URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>