force-app/main/default/objects/Apex_Debug_Log__c/fields/Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message__c</fullName>
    <description>If an exception occurs, this is the main message</description>
    <label>Exception Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>