force-app/main/default/objects/Apex_Debug_Log__c/fields/Exception_stack_trace__c.field-meta.xml
<CustomField>
    <fullName>Exception_stack_trace__c</fullName>
    <description>If an exception occurs, this is the stack trace</description>
    <label>Exception stack trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>