force-app/main/default/objects/Apex_Debug_Log__c/fields/Logged_In_Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logged In Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Apex Debug Logs</relationshipLabel>
    <relationshipName>Apex_Debug_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>