force-app/main/default/objects/Apex_Debug_Log__c/fields/Related_To_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Id__c</fullName>
    <description>An optional record to relate this Activity to</description>
    <label>Related To Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>