force-app/main/default/objects/Apex_Debug_Log__c/fields/Request_Data__c.field-meta.xml
<CustomField>
    <fullName>Request_Data__c</fullName>
    <description>The data used in the transaction. For Apex Services, this could be the data sent from an external service. For a callout, this could be the data being sent. For a batch, this could be the batch of records.</description>
    <label>Request Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>