force-app/main/default/objects/Apex_Debug_Log__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <description>The data outputted by the transaction. For an Apex REST/Soap Service, this could be the payload returned to the sender. For a callout, this could be the response body. For a batch, this could be the output of the batch logic.</description>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>