force-app/main/default/objects/Apex_Debug_Log__c/fields/Response_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Status_Code__c</fullName>
    <description>For a web call, this is the status. Would commonly be 200 for a success and 400 for a failure.</description>
    <label>Response Status Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>