force-app/main/default/objects/Apex_Debug_Log__c/fields/Transaction_Description__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Description__c</fullName>
    <description>Within the Apex Class and Method Name, give additional details on where/why this logging is happening. For example, two logs could happen in the same method - one is &apos;Save record&apos; and another is &apos;Schedule Batch&apos;.</description>
    <label>Transaction Description</label>
    <type>TextArea</type>
</CustomField>