force-app/main/default/objects/Apex_Debug_Log__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Used to distinguish the system context of this transaction</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex REST Service</fullName>
            </value>
            <value>
                <fullName>Apex SOAP Service</fullName>
            </value>
            <value>
                <fullName>REST Callout</fullName>
            </value>
            <value>
                <fullName>SOAP Callout</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Queueable/Future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>